Prevent map from overflowing on IE11 etc

--- a/src/scss/refugee-map.scss
+++ b/src/scss/refugee-map.scss
@@ -14,6 +14,7 @@
   color: #cccccc;
   font-weight: 200;
   letter-spacing: 0.1px;
+  overflow: hidden;
 }
 
 .refugee-map__loading {
